--- a/index.css
+++ b/index.css
@@ -1,3 +1,52 @@
-.heading{
-  color: lightcoral;
+.header{
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+
+.logo{
+  width: 100px;
+}
+
+.nav-items{
+  padding: 0px 20px;
+}
+
+.nav-items > ul{
+  font-size: 20px;
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-items > ul > li{
+  padding: 10px;
+  margin: 10px;
+}
+
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.res-card {
+  margin: 15px;
+  padding: 5px;
+  width: 210px;
+  height: 300px;
+  line-height: .9;
+}
+
+.res-card:hover{
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.search {
+  padding: 10px;
+}
+
+.res-logo {
+  width: 210px;
+  height: 150px;
+  object-fit: cover;
 }
