Using Normal JS Variable create listsOfRestaurant it get filters but UI not update

--- a/index.css
+++ b/index.css
@@ -48,3 +48,12 @@
   height: 150px;
   object-fit: cover;
 }
+
+.filter {
+  padding: 10px;
+}
+
+.filter-btn {
+  padding: 10px;
+  font-size: 16px;
+}
